[gd_scene load_steps=2 format=2]

[ext_resource path="res://OptionsMenu.gd" type="Script" id=1]

[node name="OptionsMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="bg" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 0.745098 )

[node name="SFXVolume" type="HSlider" parent="."]
margin_left = 352.0
margin_top = 120.0
margin_right = 544.0
margin_bottom = 136.0
min_value = -24.0
max_value = 0.0

[node name="MusicVolume" type="HSlider" parent="."]
margin_left = 352.0
margin_top = 152.0
margin_right = 544.0
margin_bottom = 168.0
min_value = -24.0
max_value = 0.0

[node name="SoundEffects" type="Label" parent="."]
margin_left = 256.0
margin_top = 120.0
margin_right = 341.0
margin_bottom = 134.0
text = "Sound Effects"

[node name="Music" type="Label" parent="."]
margin_left = 256.0
margin_top = 152.0
margin_right = 341.0
margin_bottom = 166.0
text = "Music"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="value_changed" from="SFXVolume" to="." method="_on_SFXVolume_value_changed"]
[connection signal="value_changed" from="MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
